--- a/roles/rocketmq/defaults/main.yml
+++ b/roles/rocketmq/defaults/main.yml
@@ -1,4 +1,5 @@
 # 此处应选择二进制文件
-rocketmq_download_url: "https://mirrors.tuna.tsinghua.edu.cn/apache/rocketmq/4.7.1/rocketmq-all-4.7.1-bin-release.zip" 
+rocketmq_download_url: "https://mirror.jframeworks.com/apache/rocketmq/4.8.0/rocketmq-all-4.8.0-bin-release.zip" 
+
 
 rockermq_container_port: 9010
