--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,8 @@
 #全局
 jdk_version: "8"  
 jdk_distribution: "jdk"
+
+docker_applications:
+  - rocketmqconsole
+
+docker_apps_rocketmqconsole_port: 9003
