--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,6 @@
 - src: http://github.com/websoft9dev/role_common
 - src: http://github.com/websoft9dev/role_jdk
+- src: http://github.com/websoft9dev/role_nginx
 - src: http://github.com/websoft9dev/role_docker
 - src: http://github.com/websoft9dev/role_preend
 - src: http://github.com/websoft9dev/role_end
