--- a/rocketmq.yml
+++ b/rocketmq.yml
@@ -15,5 +15,6 @@
     - { role: role_docker, tags: "role_docker"}
     - { role: rocketmq, tags: "rocketmq"}
     - { role: role_nginx, tags: "role_nginx"}
+    - { role: role_init, tags: "role_init"}
     - { role: role_preend, tags: "role_preend"}
     - { role: role_end, tags: "role_end"}
