--- a/roles/rocketmq/defaults/main.yml
+++ b/roles/rocketmq/defaults/main.yml
@@ -1,5 +1,6 @@
-# 此处应选择二进制文件
+# RocketMQ binary files
 rocketmq_download_url: "https://mirror.jframeworks.com/apache/rocketmq/4.8.0/rocketmq-all-4.8.0-bin-release.zip" 
+
 
 
 
