--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
-- src: http://github.com/websoft9dev/role_common
-- src: http://github.com/websoft9dev/role_jdk
-- src: http://github.com/websoft9dev/role_nginx
-- src: http://github.com/websoft9dev/role_docker
-- src: http://github.com/websoft9dev/role_init
-- src: http://github.com/websoft9dev/role_preend
-- src: http://github.com/websoft9dev/role_end
+- src: http://github.com/websoft9/role_common
+- src: http://github.com/websoft9/role_jdk
+- src: http://github.com/websoft9/role_nginx
+- src: http://github.com/websoft9/role_docker
+- src: http://github.com/websoft9/role_init
+- src: http://github.com/websoft9/role_preend
+- src: http://github.com/websoft9/role_end
