--- a/roles/rocketmq/tasks/main.yml
+++ b/roles/rocketmq/tasks/main.yml
@@ -28,7 +28,7 @@
     line:  'JAVA_OPT="${JAVA_OPT} -server -Xms256m -Xmx256m -Xmn125m"'
     backrefs: yes   
 
-- name: Change sh to bash
+- name: Change sh to bash,ubuntu default shell is dash,Syntax not supported
   replace:
     path: /data/rocketmq/bin/mqnamesrv
     regexp: 'sh.*'
