--- a/roles/rocketmq/tasks/main.yml
+++ b/roles/rocketmq/tasks/main.yml
@@ -33,7 +33,7 @@
     path: /data/rocketmq/bin/mqnamesrv
     regexp: "^sh.*$"
     replace: "bash ${ROCKETMQ_HOME}/bin/runserver.sh org.apache.rocketmq.namesrv.NamesrvStartup $@"
-  when: ansible_os_family == "Debian
+  when: ansible_os_family == "Debian"
   
 - name: Configuration RocketMQ Name Server
   copy:
